# cafe_bot

./: README.md  package.xml  setup.cfg  setup.py
cafe_bot/: send_goal.py
cafe_bot/msg/: Order.msg
config/: nav2_params.yaml
launch/: bringup_world.launch.py  nav2_bringup.launch.py
maps/: map1.pgm  map1.yaml  map2.pgm  map2.yaml
models/map1/: model.sdf
worlds/: map1.world
